# learning-deep-learning

./: .gitignore  pyproject.toml  setup.cfg
01_intro/: seminar_pytorch_vs_numpy.ipynb  seminar_pytorch_vs_numpy.py
02_basic_nn/: seminar_high_level_pytorch.ipynb
03_cnn/: seminar_cifar10.ipynb
04_dense/: seminar_photo2map.ipynb  seminar_photo2map__try_to_validate.ipynb
05_generative/: seminar_neural_style_transfer.ipynb
homeworks/01_cnn_classifier/: 01_cnn_classifier.ipynb  01_cnn_classifier.py  01_cnn_classifier__2.ipynb
