[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["Bogoyavlenskiy Andrey <a.bogoyavlenskiy@tinkoffinsurance.ru>"]

[tool.poetry.dependencies]
python = "3.7"
torchvision = "^0.2.1"
torch = "^1.0"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.2"
autoflake = "^1.2"
isort = "^4.3"
